checking to see if I fixed the headers now on mobile

--- a/css/3-modules/_headers.sass
+++ b/css/3-modules/_headers.sass
@@ -22,6 +22,8 @@
 // Other Pages
 .hero
   background-size: cover
+  height: calc(100vw * 1.777)
+  margin-bottom: calc(30vw * 1.77)
   .info
     h2
       color: $dark
@@ -32,27 +34,22 @@
     width: 100%
     content: ' '
   &.featured-darian-brand // Branding
-    margin-bottom: calc(50vw * 1.77)
     &:after
       background: url('../assets/img/posts/study/portfolio-img/brand-mobile-darian.png') no-repeat center center
       background-size: cover
   &.featured-web // Web Design\
-    margin-bottom: calc(50vw * 1.77)
     &:after
       background: url('../assets/img/posts/study/portfolio-img/brand-mobile-darian.png') no-repeat center center
       background-size: cover
   &.featured-external // Articles
-    margin-bottom: calc(50vw * 1.77)
     &:after
       background: url('../assets/img/posts/articles/engagement/mountainwall.png') no-repeat center center
       background-size: cover
   &.process // Process\
-    margin-bottom: calc(50vw * 1.77)
     &:after
       background: url('../assets/img/process.gif') no-repeat center center
       background-size: cover
   &.featured-darian
-    margin-bottom: calc(50vw * 1.77)
     &:after
       background: url('../assets/img/posts/study/portfolio-img/web-mobile-darian.jpg') no-repeat center center
       background-size: cover
